# pickle_inspector

./: .gitignore  Dockerfile  MANIFEST.in  Makefile  README.md  analyzer.py  ast_parser.py  cli.py  indexer.py  pyproject.toml  report.py  requirements.txt  resolver.py  setup.py  sources_and_sinks.py  utils.py
